--- a/pom.xml
+++ b/pom.xml
@@ -172,75 +172,8 @@
                     </configuration>
                 </plugin>
 
-                <plugin>
-                    <groupId>org.projectlombok</groupId>
-                    <artifactId>lombok-maven-plugin</artifactId>
-                    <version>1.18.20.0</version>
-                    <configuration>
-                        <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
-                        <outputDirectory>${project.basedir}/target/delombok</outputDirectory>
-                        <addOutputDirectory>false</addOutputDirectory>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <phase>generate-sources</phase>
-                            <goals>
-                                <goal>delombok</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                            <version>1.18.24</version>
-                        </dependency>
-                    </dependencies>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.4.1</version>
-                    <configuration>
-                        <source>8</source>
-                        <failOnError>false</failOnError>
-                        <detectJavaApiLink>false</detectJavaApiLink>
-                        <sourcepath>${project.basedir}/target/delombok</sourcepath>
-                        <tags>
-                            <tag>
-                                <name>model</name>
-                                <placement>a</placement>
-                                <head>EMF Model</head>
-                            </tag>
-                            <tag>
-                                <name>generated</name>
-                                <placement>a</placement>
-                                <head>EMF Generated</head>
-                            </tag>
-                            <tag>
-                                <name>ordered</name>
-                                <placement>a</placement>
-                                <head>EMF Ordered</head>
-                            </tag>
-                            <tag>
-                                <name>param</name>
-                                <placement>a</placement>
-                                <head>EMF Param</head>
-                            </tag>
-
-                        </tags>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>attach-javadocs</id>
-                            <goals>
-                                <goal>jar</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
             </plugins>
+
         </pluginManagement>
 
         <plugins>
@@ -397,6 +330,76 @@
                         <id>jacoco-report</id>
                         <goals>
                             <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok-maven-plugin</artifactId>
+                <version>1.18.20.0</version>
+                <configuration>
+                    <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
+                    <outputDirectory>${project.basedir}/target/delombok</outputDirectory>
+                    <addOutputDirectory>false</addOutputDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>delombok</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.projectlombok</groupId>
+                        <artifactId>lombok</artifactId>
+                        <version>1.18.24</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.4.1</version>
+                <configuration>
+                    <source>8</source>
+                    <failOnError>false</failOnError>
+                    <detectJavaApiLink>false</detectJavaApiLink>
+                    <sourcepath>${project.basedir}/target/generated-sources/jaxb/hu/blackbelt/osgi/configuration/mapper/v1/xml/ns/definition:${project.basedir}/target/delombok</sourcepath>
+
+                    <tags>
+                        <tag>
+                            <name>model</name>
+                            <placement>a</placement>
+                            <head>EMF Model</head>
+                        </tag>
+                        <tag>
+                            <name>generated</name>
+                            <placement>a</placement>
+                            <head>EMF Generated</head>
+                        </tag>
+                        <tag>
+                            <name>ordered</name>
+                            <placement>a</placement>
+                            <head>EMF Ordered</head>
+                        </tag>
+                        <tag>
+                            <name>param</name>
+                            <placement>a</placement>
+                            <head>EMF Param</head>
+                        </tag>
+
+                    </tags>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
                         </goals>
                     </execution>
                 </executions>
